docs/_sass/resources.scss
main > section.resources-header {
	& > div {
		box-sizing: content-box;
		max-width: calc(#{$content-width} - 80px);
		width: calc(100% - 80px);
	}
}

main > section.resources-section {

	&.nav-hidden > div {
		max-width: 1200px;
	}

	& > div {
		text-align: left;
		padding-top: 30px;
		padding-left: 16px;
		padding-right: 16px;
		display: flex;
		align-items: flex-start;
		max-width: none;

		& > nav {
			position: sticky;
			top: 100px;
			min-width: 220px;
			max-width: 220px;
			background-color: $light-grey-background-color;
			border-radius: 6px;
			font-size: 0.9em;
			
			margin-bottom: 30px;
			margin-right: 20px;

			& > ul {
				margin: 10px 0px;

			}

			ul {
				padding: 0px;
				list-style-type: none;
			}

			ul > li, & > li {
				padding: 5px 20px;

				&.separator {
					padding: 0px;
					border-top: 1px solid $grey-border-color;
					margin: 5px 0px;
					overflow: hidden;
				}

				&.active > a {
					font-weight: bold;
				}

				&:last-child {
					padding-bottom: 0px;
				}
			}

			& > ul > li > ul > li {
				padding-left: 20px;
			}
		}

		& > div.content {
			display: flex;
			align-items: flex-start;
			flex-grow: 2;

			& > ul.article-toc {
				font-size: 0.9em;				
				margin-bottom: 30px;
				border-left: 2px solid $light-grey-border-color;
				list-style-type: none;
				top: 100px;
				position: sticky;
				order: 4;
				margin-left: 20px;
				min-width: 300px;
				padding: 0px;

				&::before {
					content: 'On this page';
					display: block;
					padding-left: 20px;
					padding-bottom: 5px;
					padding-top: 5px;
					background-color: $light-grey-border-color;
				}

				ul {
					padding: 0px;
					list-style-type: none;
				}

				li {
					padding: 0px;
				}

				a {
					padding: 5px 20px;
					display: block;
				}

				li > ul > li > a {
					padding-left: 40px;
				}
			}

			& > article {
				order: 3;
				flex-grow: 2;

				& > h2:first-child {
					margin-top: 0px;
				}

				h2, h3, h4, h5, h6
				{
					font-weight: bold;
					margin-left: 0;
					text-align: left;
					// see [id] selector in main.scss
					// &:target::before { /* anchor margin on top */
					// 	content: "";
					// 	display: block;
					// 	margin-top: -100px;
					// 	height: 100px;
					// }
				}

				& > h2 {
					margin-bottom: 0px;
					font-size: 1.5em;
					padding-bottom: 5px;
					border-bottom: 1px solid $grey-border-color;
				}

				& > h3 {
					font-size: 1.4em;
					margin-top: 1.5em;
					margin-bottom: 0.5em;
					margin-left: 0;
					text-align: left;
				}

				& > h4 {
					font-size: 1.2em;
					font-weight: bold;
					margin-top: 1em;
					margin-bottom: 0.3em;
				}

				& > h5 {
					font-size: 1.0em;
					margin-top: 0.8em;
					margin-bottom: 0.2em;
					text-align: left;
					font-style: italic;
				}

				p {
					margin-top: 5px;
				}

				img {
					max-width: 100%;

					&.margin-left {
						margin-left: 30px;
						max-width: calc(100% - 30px);
					}
				}
			}
		}

		table p.info {
			margin-top: -1em;

			&::before {
				margin-right: 4px;
				font-family: "Line Awesome Free";
				font-weight: 800;
				content: "\f05a";
			}
		}

		/** HIGHLIGHTS **/
		blockquote.panel {
			border: 1px solid $grey-border-color;
			border-radius: 6px;
			padding: 0px 20px;
			margin: 10px 0px;

			& > p:first-child::before,
			& > h6:first-child::before {
				margin-right: 10px;
				display: inline-block;
			}

			&.info, &.warning, &.tip {
				& > p:first-child::before,
				& > h6:first-child::before {
					font-family: "Line Awesome Free";
					font-weight: 800;
				}
			}

			&.info {
				background-color: $light-grey-background-color;
				& > p:first-child::before,
				& > h6:first-child::before {
					content: "\f05a";
				}
			}
			&.tip {
				background-color: $light-grey-background-color;
				& > p:first-child::before,
				& > h6:first-child::before {
					content: "\f0eb";
				}
			}
			
			&.warning {
				background-color: $light-orange-background-color;
				& > p:first-child::before,
				& > h6:first-child::before {
					content: "\f071";				
				}
			}

			&.product {
				background-color: $light-blue-background-color;
				& > p:first-child::before,
				& > h6:first-child::before {
					content: "\e808";
					font-family: fontello;				
				}
			}

			& > p:first-child,
			& > h6:first-child {
				background-color: $grey-border-color;
				margin: 0px;
				padding: 5px 10px;
				font-weight: bold;
				font-size: 1em;
				margin-left: -20px;
				margin-right: -20px;
			}

			&.todo {
				display: none;
			}
		}

		table {
			border-collapse: collapse;
			margin-bottom: 1.5em;

			thead {
				background-color: #F6F6F6;
			}

			td, th {
				border-top: 1px solid $grey-border-color;
				border-bottom: 1px solid $grey-border-color;
				padding: 5px 10px;
				vertical-align: top;
			}


			td {
				font-size: 0.9em;

				& > *:only-child {
					margin: 0;
				}

				& > ol:only-child, & > ul:only-child
				{
					padding-left: 1em;
				}
			}
		}

		table.noborder {
			td, th {
				border: none;
			}
		}

		table.noheader {
			thead {
				display: none;
			}
		}

		table.row-headers {
			border-left: 1px solid $grey-border-color;
			border-right: 1px solid $grey-border-color;

			tr:not(last-child) {
				th:first-child, td:first-child {
					background-color: #F6F6F6;
					font-weight: bold;
					border-right: 1px solid $grey-border-color;
					font-size: 1em;
				}
			}
		}
	}
}

/**
 *
 * MOBILE
 * **/
@media only screen and (max-width: 1200px) {
	main > section.resources-section > div > div.content {
		margin-left: auto;
		flex-direction: column;

		& > ul.article-toc {
			position: relative;
			top:0;
			order: 1;
			margin-left: 0px;

			ul {
				display: none;
			}
		}	
	}
}

@media only screen and (max-width: 1000px) {
	main > section.resources-section > div {
		margin-left: auto;
		flex-direction: column;

		& > nav {
			width: 100%;
			position: relative;
			top: 0px;
		}

		table, tr, tbody, td {
			display: block;
		}

		table {

			thead {
				display: none;
			}

			&.header-small-mobile {
				td {
					margin-left: 100px;

					&:before {
						left: -90px;
						width: 80px;
					}
				}
			}

			tr {
				margin-bottom: 1em;
				border: 1px solid $grey-border-color;
				background-color: $light-grey-background-color;

				td {
					position: relative;
					margin-left: 140px;
					border: 0px solid transparent;
					padding-left: 0px;
					border-bottom: 1px solid $grey-border-color;
					min-height: calc(1.4em + 10px); /* to deal with empty cells */


					&:before {
						content: attr(data-label);
						font-weight: 800;
						position: absolute;
						width: 130px;
						left: -140px;
						top: 0px;
						bottom: -1px;
						border-bottom: 1px solid $grey-border-color;
						padding-left: 10px;
						padding-bottom: 5px;
						$td-height: 1.0em;
						padding-top: calc(5px + #{($line-height - $td-height)/2});
						line-height: $td-height;
					}

					&:last-child {
						border-bottom: 0px solid transparent;
						
						&:before {
							border-bottom: 0px solid transparent;
						}
					}
				}
			}
		}
	}
}

table#signing-file-elements tr td code {
	word-break: normal;
}


table td[data-label="Parameter"] code {
	white-space: nowrap; // prevent hypen line breaks in -Parametername 
}

table.break-code code {
	word-break: break-all;
	min-width: 10em;
	white-space: inherit;
}

table.break-column-1 tr td:nth-child(1),
table.break-column-2 tr td:nth-child(2),
table.break-column-3 tr td:nth-child(3),
table.break-column-4 tr td:nth-child(4),
table.break-column-5 tr td:nth-child(5) {
	word-break: break-all;
	min-width: 10em;
	code {
		white-space: inherit;
	}
}

div.language-powershell {
	& span.err {
		background-color: inherit;
	}
	& span.nf, span.nx, span.kt {
		color: #990000;
		font-weight: bold;
	}
}

@media only screen and (min-width: 1000px) {
	main > section.resources-section {
		& > div > div.content > article {
			img.margin-left {
				margin-left: 60px;
				max-width: calc(100% - 60px);
			}
		}
	}
}

@media only screen and (max-width: 1000px) {
	main > section.resources-section > div > nav {
		max-width: none;

		& > ul {
			li {
				display: none;
			}
			li.current-group {
				display: list-item;

				& li {
					display: list-item;
				}
			}
		}

		& > ul.show {
			li {
				display: list-item;

				ul {
					display: none;
				}
			}
		}
	}

	main > section.resources-section > div > nav.hidden-on-mobile {
		display: none;
	}
}


@media only screen and (max-width: 999px) {
	:not(pre) > code {
			word-break: break-all;
	}
}

